--- a/style.css
+++ b/style.css
@@ -74,13 +74,32 @@ h1, h3 {
     margin-bottom: 20px;
 }
 
+/* Photo de profil */
 .profile-img {
-    width: 200px; /* Ajustez la taille selon vos besoins */
-    border-radius: 50%; /* Pour un effet circulaire */
+    border-radius: 50%; /* Pour une image de profil ronde */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombre pour faire ressortir l'image */
+    max-width: 100%; /* S'assure que l'image ne déborde pas */
+    height: auto; /* Maintient le ratio d'aspect */
+    margin-top: 0;
+    margin-left: 20px;
 }
 
 .quote {
     font-style: italic;
     color: #6c757d; /* Couleur grise pour la citation */
     margin-top: 20px;
+}
+
+/* Bouton explorez moi */
+.btn-primary {
+    background-color: #A9A9A9; /* Couleur du bouton */
+    border: none;
+    color: #FFFFFF; /* Texte du bouton */
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s; /* Transition douce pour le survol */
+}
+
+.btn-primary:hover {
+    background-color: #696969; /* Couleur du bouton au survol */
 }
