--- a/style.css
+++ b/style.css
@@ -106,5 +106,7 @@ h1, h3 {
 
 /* Eviter le défilement de la section home */
 .home-section {
-    overflow-y: hidden; /* Empêche le défilement uniquement dans la section Home */
+    overflow: hidden; /* Empêche le défilement */
+    margin: 0; /* Supprime les marges */
+    padding: 0; /* Supprime les paddings */
 }
