--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ h1, h3 {
 
 /* Eviter le défilement de la section home */
 .home-section {
+    max-height: 100vh; /* Limite la hauteur à la hauteur de la fenêtre */
     overflow: hidden; /* Empêche le défilement */
-    margin: 0; /* Supprime les marges */
-    padding: 0; /* Supprime les paddings */
 }
