--- a/style.css
+++ b/style.css
@@ -112,3 +112,12 @@ h1, h3 {
     height: calc(100vh - 100px); /* Ajustez en fonction de la hauteur de l'en-tête */
     overflow: hidden; /* Empêche le défilement */
 }
+
+.Home-title {
+    font-size: 5rem; /* Taille plus grande */
+    color: #b22222; /* Rouge vintage */
+    font-family: 'Lobster', cursive; 
+    font-weight: bold; /* Mettre en gras */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin-bottom: 1.5rem;
+}
