--- a/style.css
+++ b/style.css
@@ -120,3 +120,22 @@ h1, h3 {
     line-height: 1.2; /* Réduction de l'espacement entre les lignes */
     margin-bottom: 1.5rem;
 }
+
+/*-------------------- Section About ----------------*/
+.about-title {
+    color: #C72C41; /* Couleur rouge vintage */
+    font-family: 'Lobster', cursive; /* Police Lobster */
+    font-size: 3em; /* Taille plus grande */
+    text-align: center; /* Centrer le texte */
+}
+
+.about {
+    display: flex; /* Utiliser flexbox pour centrer horizontalement */
+    justify-content: center; /* Centrer horizontalement */
+    align-items: center; /* Centrer verticalement */
+}
+
+.about-image img {
+    max-width: 80%; /* Réduire la taille de l'image */
+    height: auto; /* Garder les proportions de l'image */
+}
