--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h1, h3 {
     color: var(--text-dark);
     margin-bottom: 1.5rem;
     line-height: 1.8;
-    margin: 20px auto;
+    margin: 20px 0;
     max-width: 600px;
 }
 
