--- a/style.css
+++ b/style.css
@@ -127,7 +127,6 @@ h1, h3 {
     font-family: 'Lobster', cursive; /* Police Lobster */
     font-size: 5em; /* Taille plus grande */
     font-weight: bold;
-    line-height: 1.2;
     margin-bottom: 20px;
 }
 
@@ -138,12 +137,7 @@ h1, h3 {
 .about-intro,
 .about-sport,
 .about-vision {
-    font-size: 1.2rem;
-    color: var(--text-dark);
-    margin-bottom: 1.5rem;
-    line-height: 1.8;
-    margin: 20px 0;
-    max-width: 600px;
+    max-width: 20px 0;
 }
 
 .about-image {
