--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ h1, h3 {
     font-size: 1.2rem;
     font-weight: bold;
     margin-right: 20px;
+    background-color: #b22222;
 }
 
 /* Differentiating Circle Colors */
