--- a/style.css
+++ b/style.css
@@ -409,5 +409,5 @@ h1, h3 {
 }
 
 .cv-download a:hover {
-    background-color: #0056b3; /* Couleur de fond au survol */
+    background-color: #696969; /* Couleur de fond au survol */
 }
