--- a/style.css
+++ b/style.css
@@ -411,3 +411,44 @@ h1, h3 {
 .cv-download a:hover {
     background-color: #696969; /* Couleur de fond au survol */
 }
+
+/* -------------------- Mode clair et sombre ----------------*/
+
+/* Styles par défaut (mode clair) */
+body {
+    background-color: #ffffff; /* Couleur de fond claire */
+    color: #000000; /* Couleur du texte sombre */
+}
+
+.header {
+    background-color: #f8f9fa; /* Couleur de fond de l'en-tête */
+}
+
+/* Styles pour le mode sombre */
+body.dark-mode {
+    background-color: #121212; /* Couleur de fond sombre */
+    color: #ffffff; /* Couleur du texte clair */
+}
+
+.header.dark-mode {
+    background-color: #1e1e1e; /* Couleur de fond de l'en-tête en mode sombre */
+}
+
+.contact-card {
+    background-color: #ffffff; /* Couleur de fond des cartes en mode clair */
+}
+
+.contact-card.dark-mode {
+    background-color: #2c2c2c; /* Couleur de fond des cartes en mode sombre */
+    color: #ffffff; /* Couleur du texte des cartes en mode sombre */
+}
+
+/* Autres styles pour les éléments */
+.btn {
+    background-color: #007bff; /* Couleur des boutons en mode clair */
+    color: #ffffff; /* Couleur du texte des boutons */
+}
+
+body.dark-mode .btn {
+    background-color: #0056b3; /* Couleur des boutons en mode sombre */
+}
