--- a/style.css
+++ b/style.css
@@ -414,14 +414,25 @@ h1, h3 {
 
 /* -------------------- Pour mobiles ----------------*/
 
-/* Style pour les écrans de moins de 768px (mobiles) */
 @media (max-width: 768px) {
     h1 {
-        font-size: 2rem; /* Réduit la taille de la police */
-        text-align: center; /* Centre le texte */
+        font-size: 2rem;
+        text-align: center;
     }
+
+    h3 {
+        font-size: 1.2rem;
+        text-align: center;
+    }
+
+    .nav-tabs .nav-link {
+        font-size: 0.9rem; /* Réduit la taille des onglets */
+        padding: 5px 10px; /* Réduit les marges internes */
+    }
+
     .container {
-        padding: 10px; /* Réduit les marges internes */
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 
@@ -429,3 +440,4 @@ img {
     max-width: 100%;
     height: auto;
 }
+
